--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     
     codenarc 'org.codenarc:CodeNarc:0.25.2'
 
-    testCompile "org.grails:grails-plugin-testing:3.3.0.M2"    
+    testCompile "org.grails:grails-gorm-testing-support:1.1.3"    
     testCompile "org.grails:grails-datastore-gorm-hibernate5:$gormVersion"
     testCompile "org.grails:grails-datastore-gorm-mongodb:6.1.2.RELEASE"
     testCompile 'com.github.fakemongo:fongo:2.1.0'
